All new changes of doc file and JIra ticket related to print preview

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17287,6 +17287,7 @@ ul.duringCovid li:last-child {
 
 .h-500{
     height: 500px !important;
+    overflow-y: auto !important;
 }
 
 .spcMgntH1 h1 {
