All changes given by rupali after deploy

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17287,6 +17287,7 @@ ul.duringCovid li:last-child {
 
 .h-500{
     height: 500px !important;
+    overflow-y: auto !important;
 }
 
 .spcMgntH1 h1 {
@@ -17409,4 +17410,13 @@ ul.duringCovid li:last-child {
 }
 .timePickerOpt .ant-picker-ranges {
     color: #00abaf;
+}
+.react-confirm-alert-overlay {
+    background: rgb(10 10 10 / 70%) !important;
+}
+ul.manageDragDrop {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    overflow-x: scroll;
 }
