Jira issues of designing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7567,6 +7567,9 @@ a.vsblDots, a.conPainDots, a.bp_vsblDots, a.hideDots {
 .homeBgDrk .todaySrch {
     background-color: #404646 !important;
 }
+.homeBgDrk .todaySrchLft label {
+    background: #00abaf;
+}
 .homeBgDrk .crntMonth {
     color: #D9DADA !important;
 }
@@ -13094,6 +13097,7 @@ a.academy_ul ul {
     top: 23px;
     min-width: 140px;
     z-index: 111;
+    /* text-align: left; */
 }
 a.academy_ul {
     position: relative;
