--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -10077,7 +10077,7 @@ span.AppliedPattern {
     letter-spacing: 0;
     line-height: 12px;
 }
-.rrSysto3 label{
+.darkTheme .rrSysto3 label{
     color: #bfc1c1 !important;
 }
 .darkTheme .cstmSelect1 div, .homeBgDrk .cstmSelect1 div {
