--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9930,6 +9930,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.homeBgDrk .detailCntnt p span{
+    color: #D9DADA !important;
+}
 .darkTheme .vh-section .infoSub input, .darkTheme .genPass input[type="submit"],
 .darkTheme .kycSaveChng input[type="submit"],.darkTheme .timDatSubmit input[type="submit"] {
     background-color: #00ABAF !important;
