--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -2179,6 +2179,7 @@ a.srtDiaTim {
 /* img.MenuImg{
     margin-left: 17px;
 } */
+
 a.menuActv img{
     padding: 0px !important;
     border: none;
@@ -2187,6 +2188,7 @@ a.menuActv img{
     padding-left: 5.5%;
     padding-right: 5.5%;
     padding-top: 40px;
+    padding-bottom: 9%;
 }
 .addFlow h1{
     color: #000808;
@@ -9930,6 +9932,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.allInfo1 {
+    min-width: 150px;
+}
 .newassignLft {
     display: flex;
 }
@@ -11523,7 +11528,8 @@ ul.patientHint li {
 }
 .darkTheme .enterSpcl input, 
 .darkTheme .creatInfoIner input,
-.darkTheme .taskDescp textarea, .darkTheme .creatInfoIner .ant-picker {
+.darkTheme .taskDescp textarea, 
+.darkTheme .creatInfoIner .ant-picker {
     background: #192020;
     color: #bfc1c1;
     border: 1px solid #8e8e8e8a;
@@ -12617,6 +12623,9 @@ ul.patientHint li {
 .darkTheme .rrSysto div {
     background-color: #192020;
 }
+.darkTheme .rrSysto div input[type="text"] {
+    background-color: transparent !important;
+}
 /* .darkTheme .rrSysto div:last-child div {
     border-color: transparent;
 } */
@@ -12686,7 +12695,6 @@ ul.patientHint li {
 .darkTheme .homeBgIner {
     background: #192020 !important;
     min-height: 100vh;
-    padding-bottom: 9%;
 }
 .darkTheme .MenuMob {
     background: #404646;
