--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -2496,25 +2496,14 @@ a.lineSort {
     text-align: left;
     margin-right: 8px;
     vertical-align: middle;
-    border-radius: 2px;
-}
-.allSpec .css-yk16xz-control {
-    /* border-radius: 8px !important; */
-    background-color: #F2F2F2 !important;
-    border-color: transparent !important;
-}
-.allSpec .css-tlfecz-indicatorContainer {
-    padding: 5px;
 }
 .srchRght a {
     vertical-align: middle;
     margin-right: 8px;
+    background-color: #e1f7f7;
 }
 .allSpec div {
     min-height: initial !important;
-}
-.allSpec div {
-    border-radius: 0px !important;
 }
 
 @media (max-width: 959px){
@@ -10400,27 +10389,32 @@ p.more-change-staff-img2 {
     background: transparent;
 }
 .darkTheme .allSpec div {
-    background-color: #404646 !important;
-    background: #404646 !important;
-    border: none;
     height: initial !important;
     min-height: initial !important;
-    color: #fafafa;
-}
-.darkTheme .allSpec {
-    background-color: #202323 !important;
-    border: 1px solid #8c8c8c !important;
 }
 .allSpec {
-    border: 1px solid #7d7d7d52 !important;
+    border: none !important;
     outline: none !important;
+    height: initial !important;
+    min-height: initial !important;
+    color: #00abaf !important;
+    background: #e1f7f7 !important;
+    background-color: #e1f7f7 !important;
+    font-weight: 600;
+    border-radius: 12px;
 }
 .allSpec div , 
 .allSpec div input {
     border: none !important;
     outline: none !important;
     box-shadow: initial !important;
-    /* height: 30px; */
+}
+.allSpec div {
+    color: #00abaf !important;
+    background-color: #e1f7f7 !important;
+    background: #e1f7f7 !important;
+    font-weight: 600;
+    padding: 2.3px 2px;
 }
 .detailInfo1 {
     padding: 12px;
@@ -13568,3 +13562,39 @@ border-style: solid;
     content: "";
     margin: 0 auto;
 }
+@media (max-width: 1268px){ 
+    .vh-section .presOpinionIner td.pivoted {
+        font-size: 12px;
+    }
+    .presOpinionIner td.pivoted {
+        padding: 12px 2px !important;
+    }
+}
+@media screen and (min-width: 960px) and (max-width: 1268px){
+  .mainMenuAllSec .MuiGrid-grid-md-11 {
+    max-width: 98.666667%;
+    flex-basis: 98.666667%;
+  }
+  .mainMenuAllSec .MuiGrid-grid-md-7 {
+    max-width: 61.333333% !important;
+    flex-basis: 61.333333% !important;
+  }
+  .mainMenuAllSec .MuiGrid-grid-md-4 {
+    max-width: 30.333333% !important;
+    flex-basis: 30.333333% !important;
+  }
+  .vh-section .presOpinionIner thead th {
+    padding: 16px 10px !important;
+  }
+  .dateAdd:after {
+    height: 11px;
+    width: 7px;
+    right: 1px;
+    top: 15px;
+  }
+  img.openScnd {
+    height: 19px !important;
+    width: 19px !important;
+  }
+}
+
