--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -678,6 +678,7 @@ a.hideDots img {
     font-size: 24px;
     font-weight: bold;
     letter-spacing: 0;
+    margin-bottom: 0px !important;
 }
 .vh-section .prfilHghtLft p span, .vh-section .prfilHghtRght p span {
     font-size: 14px;
@@ -694,6 +695,7 @@ a.hideDots img {
     width: 50%;
     padding: 14px 0px;
     padding-left: 18%;
+    text-align: center;
 }
 .vh-section .prfilHghtLft {
     border-right: 1px solid #f2f2f2;
