--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9923,6 +9923,9 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.stepTdotupper ul{
+    top: 20px !important;
+}
 .allInfo1 {
     min-width: 150px;
 }
