--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16388,6 +16388,13 @@ select:-webkit-autofill:focus {
         padding-right: 12px;
     }
 }
+@media screen and (min-width: 1280px){
+    .pat_flow_sec {
+        margin-left: 11px !important;
+    }
+}
+
+
 .homeBgDrk .MuiInputBase-root {
     color: #b9bfbd !important;
 }
