--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17450,4 +17450,18 @@ ul.duringCovid li:last-child {
     font-size: 14px;
     display: block;
   }
+  .room-img-move img {
+    margin-left: 10px;
+  }
+  .drListRght2 label {
+    font-size: 12px;
+  }
+}
+.drListLft2 {
+    width: 20%;
+    display: flex;
+    margin-top: 10px;
+}
+.OnExistBed{
+    margin-top: 18px;
 }
